# zipdownloader

./: .gitignore  CMakeLists.txt  README.md
examples/: example.cpp
src/: zipdownloader.cpp  zipdownloader.hpp
